--- a/SchedulePlanner/src/components/Courses.css
+++ b/SchedulePlanner/src/components/Courses.css
@@ -1,17 +1,18 @@
+.courseListContainer {
+    justify-self: center;
+    padding: 2rem;
+    background-color: #f9f9f9;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    width:70%;
+    margin-bottom: 3rem;
+}
+
 .courseListHeader {
     display: flex;
     align-items: center;
     justify-content: space-between
 }
-
-/* .courseListHeader button{
-    border: 2px solid black;
-}
-
-.courseListHeader button:hover{
-    background-color: gray;
-    color: white;
-} */
 
 .courseListHeader button {
     border: 2px solid grey;
@@ -49,4 +50,10 @@
 
 .fa {
     font-size: 1rem;
+}
+
+.btn-success:disabled {
+    background-color: #d3d3d3;
+    border-color: #d3d3d3;
+    cursor: default;
 }
